# prosweet

./: README.md  docker-compose.yml  flake.nix
CalendarAgent/adk/: .env
CalendarAgent/adk/test/: agent-test.py  agent.py  alarm_agent.py  event_agent.py  test.py
CalendarAgent/radicale/: README.md
CalendarAgent/radicale/config/: config  users
CalendarAgent/test/: agent.py
CalenderAgent/: calendar-agent.py
adk/calendar-planner/: .env
adk/test/: agent.py
alarmsweet/: .gitignore  CMakeLists.txt  alarmctl.cpp  alarmd.cpp  alarmsweet.kdev4
alarmsweet/.kdev4/: alarmsweet.kdev4
alarmsweet/alarm/: defaults.cpp  defaults.hpp
alarmsweet/base64/: base64.hpp
alarmsweet/miniaudio/: miniaudio.h
caddy/conf/: Caddyfile
caddy/data/caddy/: instance.uuid  last_clean.json
prosweet-caldav/: .dockerignore  docker-compose.yml  package.json
prosweet-caldav/app/: README.md  dockerfile
prosweet-caldav/app/src/: alarm.ts  caldav.ts  caldav.ts.old  index.ts  tasks.ts
prosweet-caldav/src/: caldav.ts  index.ts
prosweet-calman/: .env  .gitignore  package.json
prosweet-calman/routes/: caldav.ts  package.json  server.ts
prosweet-calman/src/: index.ts
prosweet-calman/src/routes/: README.md  caldav.ts
prosweet-calman/src/services/: caldav.ts
prosweet-calman/src/sockets/: chat.ts
prosweet-frontend/prosweet/: dockerfile  package-lock.json  package.json
prosweet-frontend/prosweet/app/: layout.tsx  page.tsx
prosweet-frontend/prosweet/app/alarms/: page.tsx
prosweet-frontend/prosweet/lib/: honoClient.ts
prosweet-llm/: .gitignore  package-lock.json  package.json
prosweet-llm/src/: index.ts
prosweet-llm/src/sockets/: chat.ts
radicale/: README.md  docker-compose.yml
radicale/config/: config  users
(+106 files in other folders)
